--- a/ms_tech/Views/Clientes/Edit.cshtml
+++ b/ms_tech/Views/Clientes/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ms_tech.Models.Clientes
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
 }
 
-<h2>Edit</h2>
+<h2>@ViewBag.Title</h2>
 
 
 @using (Html.BeginForm())
@@ -84,7 +84,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Volver", "Index")
 </div>
 
 @section Scripts {
