--- a/ms_tech/Views/Incidentes/Create.cshtml
+++ b/ms_tech/Views/Incidentes/Create.cshtml
@@ -14,7 +14,7 @@
         <h4>Incidentes</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-       
+
         <div class="form-group">
             @Html.LabelFor(model => model.IdCliente, "Cliente", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -53,16 +53,17 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-             @Html.TextAreaFor(model => model.Descripcion, 5, 55, htmlAttributes: new { @class = "form-control" })
+                @Html.TextAreaFor(model => model.Descripcion, 5, 55, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
             </div>
         </div>
 
+
         <div class="form-group">
-            @Html.LabelFor(model => model.Prioridad, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.IdPrioridad, "Prioridad", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Prioridad, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Prioridad, "", new { @class = "text-danger" })
+                @Html.DropDownList("IdPrioridad", (IEnumerable<SelectListItem>)ViewBag.IdPrioridad, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.IdPrioridad, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -85,6 +86,38 @@
                 format: 'dd/mm/yyyy',
                 autoclose: true
             });
+
+            //Dropdownlist Selectedchange event
+            $("#IdProducto").change(function () {
+
+                $("#IdProblema").empty();
+                $.ajax({
+                    type: 'POST',
+                    url: '@Url.Action("GetProblemas", "Soluciones")', // we are calling json method
+
+                    dataType: 'json',
+
+                    data: { id: $("#IdProducto").val() },
+                    // here we are get value of selected Producto and passing same value as inputto json method GetProblemas.
+
+                    success: function (problemas) {
+                        // states contains the JSON formatted list
+                        // of states passed from the controller
+
+                        $.each(problemas, function (i, problema) {
+                            $("#IdProblema").append('<option value="' + problema.Value + '">' + problema.Text + '</option>');
+                            // here we are adding option for States
+
+                        });
+                    },
+                    error: function (ex) {
+                        alert('Error al obtener problemas.' + ex);
+                    }
+                });
+                return false;
+            });
+
+            $('#IdProducto').trigger('change');
         });
     </script>
 }
