--- a/ms_tech/Views/Usuarios/Start.cshtml
+++ b/ms_tech/Views/Usuarios/Start.cshtml
@@ -1,11 +1,14 @@
 ﻿@{
     ViewBag.Title = "Inicio";
+    ViewBag.Fecha = DateTime.Now.ToString();
 }
 
 <div class="jumbotron">
     <h1>MS-Tech</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p>@ViewBag.Fecha
+    </p>
 </div>
 
 <div class="row">
@@ -28,4 +31,5 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
+    
 </div>
