--- a/ms_tech/Views/Incidentes/EditarEstado.cshtml
+++ b/ms_tech/Views/Incidentes/EditarEstado.cshtml
@@ -19,7 +19,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IdUsuario, "Usuario", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IdUsuario", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("IdUsuario", null, htmlAttributes: new { @class = "form-control", @disabled = "true" })
                 @Html.ValidationMessageFor(model => model.IdUsuario, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IdCliente, "Cliente", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IdCliente", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("IdCliente", null, htmlAttributes: new { @class = "form-control", @disabled = "true" })
                 @Html.ValidationMessageFor(model => model.IdCliente, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,7 +35,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IdProducto, "Producto", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IdProducto", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("IdProducto", null, htmlAttributes: new { @class = "form-control", @disabled = "true" })
                 @Html.ValidationMessageFor(model => model.IdProducto, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -43,7 +43,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IdProblema, "Problema", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IdProblema", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("IdProblema", null, htmlAttributes: new { @class = "form-control", @disabled = "true" })
                 @Html.ValidationMessageFor(model => model.IdProblema, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -51,20 +51,34 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Descripcion, 5, 55, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+                @Html.TextAreaFor(model => model.Descripcion, 5, 55, htmlAttributes: new { @class = "form-control", @disabled = "true" })
+                @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger", @disabled = "true" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.IdPrioridad, "Prioridad", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("IdPrioridad", (IEnumerable<SelectListItem>)ViewBag.IdPrioridad, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("IdPrioridad", (IEnumerable<SelectListItem>)ViewBag.IdPrioridad, htmlAttributes: new { @class = "form-control", @disabled = "true" })
                 @Html.ValidationMessageFor(model => model.IdPrioridad, "", new { @class = "text-danger" })
             </div>
         </div>
 
-       
+        <div class="form-group">
+            @Html.LabelFor(model => model.IdEstado, "Estado", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("IdEstado", (IEnumerable<SelectListItem>)ViewBag.IdEstado, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.IdEstado, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Observaciones, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextAreaFor(model => model.Observaciones, 5, 55, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Observaciones, "", new { @class = "text-danger", @disabled = "true" })
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
