--- a/ms_tech/Views/Incidentes/Index.cshtml
+++ b/ms_tech/Views/Incidentes/Index.cshtml
@@ -32,10 +32,7 @@
             Prioridad
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Calificacion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Comentario)
+            Estado
         </th>
         <th></th>
     </tr>
@@ -81,12 +78,10 @@
                 }
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Calificacion)
+                @Html.DisplayFor(modelItem => item.Estados.Nombre)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Comentario)
-            </td>
-            <td>
+                @Html.ActionLink("Editar Estado", "EditarEstado", new { id = item.IdIncidente }) |
                 @Html.ActionLink("Editar", "Edit", new { id = item.IdIncidente }) |
                 @Html.ActionLink("Detalles", "Details", new { id = item.IdIncidente })
                
