--- a/ms_tech/Views/Shared/_Layout.cshtml
+++ b/ms_tech/Views/Shared/_Layout.cshtml
@@ -52,6 +52,13 @@
                         </ul>
                     </li>
 
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Estadísticas <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Estadísticas", "Index", "Estadisticas")</li>
+                        </ul>
+                    </li>
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
