--- a/ms_tech/Views/Incidentes/Index.cshtml
+++ b/ms_tech/Views/Incidentes/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<ms_tech.ViewModels.IncidentesViewModel>
+@using ms_tech.Helpers;
 
 @{
     ViewBag.Title = "Lista de Incidentes";
@@ -82,9 +83,8 @@
             </td>
             <td>
                 @Html.ActionLink("Editar Estado", "EditarEstado", new { id = item.IdIncidente }) |
-                @Html.ActionLink("Editar", "Edit", new { id = item.IdIncidente }) |
-                @Html.ActionLink("Detalles", "Details", new { id = item.IdIncidente })
-               
+                @Html.ImageActionLink("Editar", "Edit", "Incidentes", new { id = item.IdIncidente }, null) |
+                @Html.ImageActionLink("Detalles", "Details", "Incidentes", new { id = item.IdIncidente }, null)
             </td>
         </tr>
     }
