--- a/ms_tech/Views/Usuarios/Index.cshtml
+++ b/ms_tech/Views/Usuarios/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<ms_tech.Models.Usuarios>
+@using ms_tech.Helpers;
 
 @{
     ViewBag.Title = "Lista de Usuarios";
@@ -29,35 +30,38 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.UsuariosTipos.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Apellido)
-        </td>
-        <td>
-            @if (item.Activo){
-               <text>Si</text>
-            }
-            else { 
-                <text>No</text>
-            }
-            @*Html.DisplayFor(modelItem => item.Activo)*@
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.IdUsuario }) |
-            @Html.ActionLink("Detalles", "Details", new { id=item.IdUsuario }) |
-            @Html.ActionLink("Borrar", "Delete", new { id=item.IdUsuario })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UsuariosTipos.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Apellido)
+            </td>
+            <td>
+                @if (item.Activo)
+                {
+                    <text>Si</text>
+                }
+                else
+                {
+                    <text>No</text>
+                }
+                @*Html.DisplayFor(modelItem => item.Activo)*@
+            </td>
+            <td>
+                @Html.ImageActionLink("Editar", "Edit", "Usuarios", new { id = item.IdUsuario }, null) |
+                @Html.ImageActionLink("Detalles", "Details", "Usuarios", new { id = item.IdUsuario }, null) |
+                @Html.ImageActionLink("Eliminar", "Delete", "Usuarios", new { id = item.IdUsuario }, null)
+            </td>
+        </tr>
+    }
 
 </table>
