--- a/ms_tech/Views/Clientes/Index.cshtml
+++ b/ms_tech/Views/Clientes/Index.cshtml
@@ -12,12 +12,14 @@
 <h2>@ViewBag.Title</h2>
 
 <p>
-    @Html.ActionLink("Nuevo Cliente", "Create")
+   
+    @Html.IconButton("Nuevo Cliente", "Create", "Clientes", null, null,"")
+   
 </p>
 @using (Html.BeginForm("Index", "Clientes", FormMethod.Get))
 {
     <p>
-        <span style="font-weight: bold" class="control-label">&nbsp;&nbsp;Filtro:&nbsp;</span> @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control", @style = "display:inline-block" })
+        @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control", @style = "display:inline-block", @placeholder = "Filtrar" })
         <input type="submit" value="Buscar" class="btn btn-default" />
     </p>
 }
