--- a/ms_tech/Views/Incidentes/Edit.cshtml
+++ b/ms_tech/Views/Incidentes/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ms_tech.ViewModels.IncidentesViewModel
+@using ms_tech.Helpers;
 
 @{
     ViewBag.Title = "Editar";
@@ -75,7 +76,7 @@
 }
 
 <div>
-    @Html.ActionLink("Volver", "Index")
+    @Html.IconButton("Volver", "Index", "Incidentes", null, null, "")
 </div>
 
 @section scripts {
