--- a/ms_tech/Views/Incidentes/Create.cshtml
+++ b/ms_tech/Views/Incidentes/Create.cshtml
@@ -70,7 +70,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Crear Incidente" class="btn btn-default" />
+                @Html.BotonGuardar("Crear Incidente")
             </div>
         </div>
     </div>
