--- a/ms_tech/Views/Usuarios/Index.cshtml
+++ b/ms_tech/Views/Usuarios/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>@ViewBag.Title</h2>
 
 <p>
-    @Html.ActionLink("Nuevo Usuario", "Create")
+    @Html.IconButton("Nuevo Usuario", "Create", "Usuarios", null, null, "")
 </p>
 <table class="table">
     <tr>
