--- a/ms_tech/Views/Clientes/Delete.cshtml
+++ b/ms_tech/Views/Clientes/Delete.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ms_tech.Models.Clientes
+@using ms_tech.Helpers;
 
 @{
     ViewBag.Title = "Delete";
@@ -73,8 +74,9 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.IconButton("Volver", "Index", "Clientes", null, null, "")
+            @Html.ActionLink("Eliminar", "Delete", new { id = Model.IdCliente }) |
+
         </div>
     }
 </div>
