--- a/ms_tech/Views/Clientes/Details.cshtml
+++ b/ms_tech/Views/Clientes/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ms_tech.Models.Clientes
+@using ms_tech.Helpers;
 
 @{
     ViewBag.Title = "Detalles";
@@ -94,6 +95,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.IdCliente }) |
-    @Html.ActionLink("Volver", "Index")
+    @Html.IconButton("Volver", "Index", "Clientes", null, null, "")
+    @Html.IconButton("Editar", "Edit", "Clientes", new { id = Model.IdCliente }), null, "")
 </p>
