--- a/ms_tech/Views/Usuarios/Details.cshtml
+++ b/ms_tech/Views/Usuarios/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ms_tech.Models.Usuarios
+@using ms_tech.Helpers;
 
 @{
     ViewBag.Title = "Detalles";
@@ -78,6 +79,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.IdUsuario }) |
-    @Html.ActionLink("Volver", "Index")
+    @Html.IconButton("Volver", "Index", "Usuarios", null, null, "")
+    @Html.IconButton("Editar", "edit", "Usuarios", new { id = Model.IdUsuario }, null, "")
 </p>
