--- a/ms_tech/Views/Usuarios/Edit.cshtml
+++ b/ms_tech/Views/Usuarios/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ms_tech.Models.Usuarios
+@using ms_tech.Helpers;
 
 @{
     ViewBag.Title = "Editar";
@@ -62,14 +63,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Guardar" class="btn btn-default" />
+                @Html.BotonGuardar()
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Volver", "Index")
+    @Html.IconButton("Volver", "Index", "Usuarios", null, null, "")
 </div>
 
 @section Scripts {
