--- a/ms_tech/Views/Usuarios/Index.cshtml
+++ b/ms_tech/Views/Usuarios/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<ms_tech.Models.Usuarios>
+﻿@model PagedList.IPagedList<ms_tech.Models.Usuarios>
+@using PagedList.Mvc;
 @using ms_tech.Helpers;
 
 @{
@@ -10,22 +11,29 @@
 <p>
     @Html.IconButton("Nuevo Usuario", "Create", "Usuarios", null, null, "")
 </p>
+@using (Html.BeginForm("Index", "Usuarios", FormMethod.Get))
+{
+    <p>
+        @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control", @style = "display:inline-block", @placeholder = "Filtro" })
+        @Html.BotonBuscar()
+    </p>
+}
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.UsuariosTipos.Nombre)
+            @Html.ActionLink("Tipo", "Index", new { sortOrder = ViewBag.TipoSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.ActionLink("Email", "Index", new { sortOrder = ViewBag.EmailSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Nombre)
+            @Html.ActionLink("Nombre", "Index", new { sortOrder = ViewBag.NombreSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Apellido)
+            @Html.ActionLink("Apellido", "Index", new { sortOrder = ViewBag.ApellidoSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Activo)
+            @Html.ActionLink("Activo", "Index", new { sortOrder = ViewBag.ActivoSortParm, currentFilter = ViewBag.CurrentFilter })
         </th>
         <th></th>
     </tr>
@@ -65,3 +73,12 @@
     }
 
 </table>
+
+@{
+    if (Model.PageCount > 1)
+    {
+        <text>Página</text> @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) <text>de</text> @Model.PageCount
+
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+    }
+}
